Modify PathMatchingResourcePatternResolverTests so that it passes on main
See gh-29243